# minerva

./: .gitignore  .pre-commit-config.yaml  .tokeignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  _typos.toml  cliff.toml  deny.toml  lambda.http  sample.sql  test.http
.github/workflows/: build.yml
crates/clickhouse/: Cargo.toml  README.md
crates/clickhouse/examples/: arrow2json.rs  query.rs  query_ch.rs
crates/clickhouse/fixtures/: test.arrow
crates/clickhouse/src/: data_source.rs  lib.rs  query.rs  runner.rs
crates/common/: Cargo.toml
crates/common/src/: convert.rs  lib.rs
crates/df/: Cargo.toml
crates/df/examples/: query_df.rs
crates/df/src/df/: mod.rs  queryrunner.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/service/: Cargo.toml
crates/service/examples/: dataset.rs
crates/service/fixtures/: pk.pem  sk.pem
crates/service/src/: auth.rs  error.rs  lib.rs
crates/service/src/api/: dataset.rs  mod.rs
crates/service/src/middleware/: bearer_auth.rs  cf_secret.rs  mod.rs
smithy/: .gitignore  smithy-build.json
smithy/model/: data.smithy  dataset.smithy  error.smithy  main.smithy
web/: .gitignore  astro.config.mjs  netlify.toml  package.json  tailwind.config.cjs  tsconfig.json
web/src/: api.ts  config.yaml  db.ts  navigation.js
web/src/assets/styles/: tailwind.css
web/src/components/: CustomStyles.astro
web/src/components/blog/: ListItem.astro  Tags.astro
web/src/components/common/: BasicScripts.astro  SiteVerification.astro
web/src/components/ui/: DListItem.astro
web/src/components/vue/: LargeTable.vue  LeftNav.vue  QueryApp.vue  QueryPanel.vue  SigninForm.vue  SqlAutoComplete.vue  StatChart.vue
web/src/components/widgets/: Announcement.astro
web/src/layouts/: LandingLayout.astro  PageLayout.astro
web/src/lib/: api.ts  index.ts
web/src/lib/ai/: chart.ts  index.ts  sql.ts  suggestion.ts
web/src/pages/: _app.ts  app.astro  index.astro  services.astro  signin.astro
web/src/pages/[...blog]/: [...page].astro
web/src/pages/homes/: index.astro  mobile-app.astro
web/src/utils/: config.ts
