[workspace]
members = [
  "smithy/build/smithy/source/rust-server-codegen",
  "crates/server",
  "crates/service",
  "crates/common",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["headers", "query", "tracing"] }
dataset-server-sdk = { path = "smithy/build/smithy/source/rust-server-codegen" }
minerva-service = { path = "crates/service" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "time",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
