[package]
name = "minerva-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = "1"
arrow = { version = "50", features = ["ipc_compression"] }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
