[package]
name = "df"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "34.0.0"
datafusion-common = "34.0.0"
object_store = { version = "0.8.0", default-features = false, features = [
  "aws",
  "http",
] }
minerva-common = { workspace = true }
url = "2.5.0"
anyhow = { workspace = true }
