[package]
name = "minerva-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
aws-smithy-http-server = { version = "0.60", features = ["request-id"] }
axum = { workspace = true }
hyper = "0.14"
lambda_http = { version = "0.8", default-features = false, features = [
  "apigw_http",
] }
lambda_runtime = "0.8"
minerva-service = { workspace = true }
tokio = { workspace = true }
tower = "0.4"
tower-service = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
